Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_abi_struct_missing_field.flow
import "../../std/abi/testabi.flow"

program bad_abi_struct_missing_field

main {
    p : Point({x:10})
    result : c_int(0)
    point_sum(p) -> result
    print result
}
